--- a/mission/LogisticsManage/.env.development
+++ b/mission/LogisticsManage/.env.development
@@ -2,4 +2,4 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'https://www.horgosstkj.com/api'
+VUE_APP_BASE_API = 'https://390u45d994.zicp.fun'
