完成项目雏形：自选股

--- a/mission/EectronicMoney/package.json
+++ b/mission/EectronicMoney/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mission-one",
-  "version": "0.1.0",
+  "name": "EectronicMoney",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
